# aula16-usando-postgres

./: README.md  database.db  pyproject.toml
src/: main.py
src/models/: manutencao_model.py
